fix(static): proper overflow wrap

--- a/static/style.css
+++ b/static/style.css
@@ -113,6 +113,7 @@ html, body {
     width: 600px;
     max-width: 100%;
     border-radius: 8px;
+    overflow-wrap: break-word;
 }
 
 .calc-result[data-in-progress='true'] {
